# TCP-IP

./: README.md
Linux/: .gitignore  CMakeLists.txt  Makefile
Linux/client/: CMakeLists.txt  Makefile
Linux/client/lib/: CMakeLists.txt  Makefile  error_handling.c  error_handling.h
Linux/client/src/: hello_client.c
Linux/server/: CMakeLists.txt  Makefile
Linux/server/lib/: CMakeLists.txt  Makefile  error_handling.c  error_handling.h
Linux/server/src/: hello_server.c
Windows/: TCP-IP.sln
Windows/Client/: Client.vcxproj  Client.vcxproj.filters
Windows/Client/Debug/Client.tlog/: Client.lastbuildstate
Windows/Client/lib/: error_handling.c
Windows/Client/src/: hello_client_win.c  tcp_client_win.c
Windows/Client/x64/Debug/: vc141.idb
Windows/Client/x64/Debug/Client.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Client.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Windows/Debug/: Server.ilk
Windows/Server/: Server.vcxproj  Server.vcxproj.filters
Windows/Server/Debug/: vc141.idb
Windows/Server/Debug/Server.tlog/: CL.command.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Windows/Server/lib/: error_handling.c  error_handling.h
Windows/Server/src/: hello_server_win.c
Windows/Server/x64/Debug/: vc141.idb
Windows/Server/x64/Debug/Server.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Server.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Windows/x64/Debug/: Client.ilk  Server.ilk
